<resources>
    <string name="app_name">学生信息管理系统</string>
    <string name="searchStuInfo">查找</string>
    <string name="addStuInfo">新增学生</string>
    <string name="stuName">姓名:</string>
    <string name="stuID">学号:</string>
    <string name="stuSex">性别:(默认为男生)</string>
    <string name="stuClass">班级:</string>
    <string name="stuOther">备注:</string>
    <string name="female">女</string>
    <string name="male">男</string>
    <string name="stuInfoDetails">学生信息</string>
</resources>
