<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.AddStudentActivity">
    <!-- edit information area-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:textSize="25dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stuName"/>
            <EditText
                android:id="@+id/edit_stuName"
                android:hint="姓名不包含空格"
                android:singleLine="true"
                android:imeOptions="actionNext"
                android:nextFocusForward="@+id/edit_stuID"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"/>

            <TextView
                android:textSize="25dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stuID"/>
            <EditText
                android:id="@+id/edit_stuID"
                android:hint="必填字段"
                android:singleLine="true"
                android:imeOptions="actionNext"
                android:nextFocusForward="@+id/edit_stuClass"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"/>

            <TextView
                android:textSize="25dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stuSex"/>
            <RadioGroup
                android:id="@+id/stuSexGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:textSize="25dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/isMale"
                    android:text="@string/male"/>
                <RadioButton
                    android:textSize="25dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/isFemale"
                    android:text="@string/female"/>
            </RadioGroup>

            <TextView
                android:textSize="25dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stuClass"/>
            <EditText
                android:hint="选填字段"
                android:id="@+id/edit_stuClass"
                android:singleLine="true"
                android:imeOptions="actionNext"
                android:nextFocusForward="@+id/edit_stuOther"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"/>

            <TextView
                android:textSize="25dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stuOther"/>
            <EditText
                android:hint="选填字段"
                android:id="@+id/edit_stuOther"
                android:singleLine="true"
                android:imeOptions="actionDone"

                android:layout_height="wrap_content"
                android:layout_width="match_parent"/>
        </LinearLayout>
    </ScrollView>

    <!--bottom button area-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/confirm_action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="确认"/>
        <Button
            android:id="@+id/cancel_action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="取消"/>
    </LinearLayout>
</LinearLayout>
